argocd/manifests/media-services/sonarr/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: media-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
        - name: sonarr
          image: linuxserver/sonarr:latest
          ports:
            - containerPort: 8989
          volumeMounts:
            - mountPath: /data/torrents
              name: sonarr-data
              subPath: torrents
            - mountPath: /data/media
              name: sonarr-data
              subPath: media
            - mountPath: /config
              name: sonarr-config
      volumes:
        - name: sonarr-data
          persistentVolumeClaim:
            claimName: smb-pvc
        - name: sonarr-config
          hostPath:
            path: /var/lib/sonarr/config
            type: DirectoryOrCreate
