argocd/manifests/media-services/sonarr/service.yml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: media-system
spec:
  selector:
    app: sonarr
  ports:
    - port: 80
      targetPort: 8989
  type: ClusterIP
