argocd/manifests/media-services/sonarr/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr
  namespace: media-system
  annotations:
    gethomepage.dev/href: "http://sonarr.clusterlab.cc"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: "TV Series Management."
    gethomepage.dev/group: Media
    gethomepage.dev/icon: sonarr.png
    gethomepage.dev/name: sonarr
    gethomepage.dev/pod-selector: "app=sonarr"
    gethomepage.dev/widget.type: "sonarr"
    gethomepage.dev/widget.url: "https://sonarr.clusterlab.cc"
    gethomepage.dev/widget.key: "ae939b27f1024df49864399e9f8c5504"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sonarr.clusterlab.cc`)
      kind: Rule
      services:
        - name: sonarr
          port: 80
  tls:
    secretName: sonarr-clusterlab-cc-tls
